--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       position: absolute;
       width: 10px;
       height: 10px;
-      background-color: purple;
+      background-color: blue;
       border-radius: 50%;
       opacity: 0;
       animation: fall 1s ease-in-out forwards;
@@ -28,7 +28,7 @@
   }
   to {
     opacity: 0;
-    transform: translateY(10vh);
+    transform: translateY(40vh);
   }
 }
 
