--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
       position: absolute;
       width: 10px;
       height: 10px;
-      background-color: blue;
+      background-color: gray;
       border-radius: 50%;
       opacity: 0;
       animation: fall 1s ease-in-out forwards;
     }
 @keyframes fall {
   from {
-    opacity: 1;
+    opacity: 0.6;
   }
   to {
     opacity: 0;
-    transform: translateY(40vh);
+    transform: translateY(25vh);
   }
 }
 
@@ -59,13 +59,12 @@
   
   <div id="particles"></div>
   <div id="screenA">
-    I'm mtnky <3
     <br>please click anywhere
   </div>
 
   
   <div id="screenB" style="display: none;">
-    <h1>画面Bです</h1>
+    <h1>I'm mtnky <3</h1>
   </div>
 
     
