--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       border-radius: 50%;
       opacity: 0;
       animation: fall 1s ease-in-out forwards;
+	    z-index: 99999999999999999; 
     }
 @keyframes fall {
   from {
