--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ html {
   <div id="screenB" style="display: none;" background="mtnky.png">
     
 
-		<div style="position:relative;top:100px;bottom:0;right:0;left:0;background-color:#000238; width:700px; height:550px; margin:auto;"><font size:6><br><br></font><img src="ww3.png"></img><font color="#ffffff">
+		<div style="position:relative;top:100px;bottom:0;right:0;left:0;background-color:#F5F5F5; width:700px; height:550px; margin:auto;"><font size:6><br><br></font><img src="ww3.png"></img><font color="#ffffff">
 		<h1 class="orbitron">mtnky</h1>
 <center><button class="dc" onclick="alert('Discord: mtnky')"><div class="orbitron">Discord</div></button><font size=5><br></font><button class="shadow" onclick="location.href='https://www.youtube.com/@dabanky?sub_confirmation=1'"><div class="orbitron">YT</div></button></center>
 </font></div><br><br><br><br><br><br><!-- JavaScriptのコード -->
