--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ transform: translate(-50%,-50%);
 .shadow {
   width:100px;
   font-size:12px;
-  color:#FFFFFF;
+  color:#000000;
   text-align:center;
   display:block;
   padding:10px 0 10px;
@@ -110,19 +110,19 @@ transform: translate(-50%,-50%);
 .shadow:hover {
   width:100px;
   font-size:12px;
-  color:#FFFFFF;
+  color:#000000;
   text-align:center;
   display:block;
   padding:10px 0 10px;
   background: transparent;
   border-radius: 20px;
-  border: 1px solid white;
+  border: 1px solid black;
   transition: .2s cubic-bezier(0.45, 0, 0.55, 1);
 }
 .dc {
   width:100px;
   font-size:12px;
-  color:#FFFFFF;
+  color:#000000;
   text-align:center;
   display:block;
   padding:10px 0 10px;
@@ -134,7 +134,7 @@ transform: translate(-50%,-50%);
 .dc:hover {
   width:100px;
   font-size:12px;
-  color:#FFFFFF;
+  color:#000000;
   text-align:center;
   display:block;
   padding:10px 0 10px;
