--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ transform: translate(-50%,-50%);
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  color:#000000;
 }
 .shadow {
   width:100px;
@@ -168,7 +169,6 @@ html {
 
   
   <div id="screenB" style="display: none;" background="mtnky.png">
-    
 
 		<div style="position:relative;top:100px;bottom:0;right:0;left:0;background-color:#F5F5F5; width:700px; height:550px; margin:auto;"><font size:6><br><br></font><img src="ww3.png"></img><font color="#ffffff">
 		<h1 class="orbitron">mtnky</h1>
