--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ html {
 
 		<div style="position:relative;top:100px;bottom:0;right:0;left:0;background-color:#F5F5F5; width:700px; height:550px; margin:auto;"><font size:6><br><br></font><img src="ww3.png"></img><font color="#ffffff">
 		<h1 class="orbitron">mtnky</h1>
-<center><button class="dc" onclick="alert('Discord: mtnky')"><div class="orbitron">Discord</div></button><font size=5><br></font><button class="shadow" onclick="location.href='https://www.youtube.com/@dabanky?sub_confirmation=1'"><div class="orbitron">YT</div></button></center>
+<center><button class="dc" onclick="alert('Discord: mtnky')"><div class="orbitron">Discord</div></button><font size=5><br></font><button class="shadow" onclick="location.href='https://www.youtube.com/@Bw5niper?sub_confirmation=1'"><div class="orbitron">YT</div></button></center>
 </font></div><br><br><br><br><br><br><!-- JavaScriptのコード -->
 <script>
   // テキストリンクの要素を取得する
