--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ transform: translate(-50%,-50%);
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  color:#000000;
+  color:#ffd6f9;
 }
 .shadow {
   width:100px;
@@ -137,6 +137,11 @@ transform: translate(-50%,-50%);
   border: 1px solid gray;
   transition: .2s cubic-bezier(0.45, 0, 0.55, 1);
 }
+
+.scb {
+  background: #ebebeb;
+}
+	
 .dc:hover {
   width:100px;
   font-size:12px;
@@ -173,7 +178,7 @@ html {
   </div>
 
   
-  <div id="screenB" style="display: none;" background="mtnky.png">
+  <div id="screenB" style="display: none;" background="mtnky.png" class="scb">
 
 		<div style="position:relative;top:100px;bottom:0;right:0;left:0;background-color:#eb8fe9; width:700px; height:550px; margin:auto;"><font size:6><br><br></font><font color="#ff9191">
 		<h1 class="orbitron">mtnky</h1>
