--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ window.addEventListener('mousemove', (event) => {
 
     const screenA = document.getElementById('screenA');
 const screenB = document.getElementById('screenB');
-
+const music = document.querySelector("#music");
 document.body.addEventListener('click', () => {
   screenA.style.display = 'none';
   screenB.style.display = 'block';
