--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       position: absolute;
       width: 10px;
       height: 10px;
-      background-color: gray;
+      background-color: pink;
       border-radius: 0%;
       opacity: 0;
       animation: fall 1s ease-in-out forwards;
