--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@ document.body.addEventListener('click', () => {
   screenB.style.display = 'block';
 	
   music.play();
+	music.volume = 60;
 });
 
 	  document.body.addEventListener('click', () => {
