--- a/index.html
+++ b/index.html
@@ -20,15 +20,12 @@
 
     
     .particle {
-      position: absolute;
-      width: 10px;
-      height: 10px;
-      background-color: pink;
-      border-radius: 0%;
-      opacity: 0;
-      animation: fall 1s ease-in-out forwards;
-	    z-index: 99999999999999999; 
-    }
+  background: url(star.svg) no-repeat center center;
+  background-size: cover;
+  width: 20px;
+  height: 20px;
+  z-index: 99999999999;
+}
 @keyframes fall {
   from {
     opacity: 0.6;
