--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     
     .particle {
-  background: url(star.svg) no-repeat center center;
+  background: url(star.png) no-repeat center center;
   background-size: cover;
   width: 20px;
   height: 20px;
